cc_library(
    name = "window",
    hdrs = ["src/window/window.h"],
    deps = [
        "@glfw",
    ],
)

cc_library(
    name = "glfw_window",
    srcs = ["src/window/glfw_window.cpp"],
    hdrs = ["src/window/glfw_window.h"],
    deps = [
        ":window",
    ],
)

cc_library(
    name = "physics_world",
    srcs = ["src/physics/physics_world.cpp"],
    hdrs = ["src/physics/physics_world.h"],
    deps = ["@bullet"],
)

cc_library(
    name = "camera",
    srcs = ["src/camera/camera.cpp"],
    hdrs = ["src/camera/camera.h"],
    deps = [
        ":input",
        "@bullet",
        "@glfw",
    ],
)

cc_library(
    name = "input",
    srcs = ["src/input/glfw_input.cpp"],
    hdrs = [
        "src/input/glfw_input.h",
        "src/input/input.h",
    ],
    deps = [
        "@bullet",
        "@glfw",
    ],
)

cc_library(
    name = "utils",
    srcs = ["src/utils/debug_utils.cpp"],
    hdrs = ["src/utils/debug_utils.h"],
    deps = [
        ":glfw_window",
        "@bullet",
        "@glfw",
    ],
)

cc_library(
    name = "engine",
    srcs = ["src/engine/engine.cpp"],
    hdrs = ["src/engine/engine.h"],
    deps = [
        ":camera",
        ":glfw_window",
        ":physics_world",
        ":utils",
        ":window",
        "@glfw",
    ],
)

cc_binary(
    name = "ramengine",
    srcs = ["src/main.cpp"],
    linkopts = [
        "-lGL",
        "-lGLU",
        "-lglfw",
    ],
    deps = [
        ":engine",
        ":window",
        "@bullet",
        "@glfw",
    ],
)
